tests/snapshots/reproduce_unmanaged_sync__reproduce_unmanaged_sync_explicit.snap
---
source: tests/reproduce_unmanaged_sync.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch explicit-unmanaged is UNMANAGED. Allowing standard push.
